updated header, misc css

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,7 +3,7 @@
   --secondary: #F3A847;
   --tertiary: #B12704;
   --light: #fafafa;
-  --dark: #272f32;
+  --dark: #845210;
   --error: rgb(228, 46, 1);
   --spacing-one: calc(1rem * 0.5);
   --spacing-two: calc(1rem);
@@ -21,7 +21,7 @@ body {
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Karla', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-weight: 400;
   line-height: 1.5;
   font-size: 16px;
@@ -34,7 +34,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Roboto Slab', serif;
   font-weight: 500;
   margin: 5px 0;
   line-height: 1.25;
@@ -80,17 +80,21 @@ a:hover {
 }
 
 header {
-  background: var(--primary);
+  background: var(--secondary);
 }
 
 header a {
-  color: var(--light);
+  color: var(--dark);
+}
+
+header a:hover {
+  text-decoration: none;
 }
 
 button {
   font-size: 1rem;
   text-decoration: none;
-  padding: 0.25rem 1rem;
+  padding: .75rem 1rem;
   border-radius: .5rem;
   border: none;
   outline: none;
