--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,8 @@
 :root {
-  --primary: #23a5f1;
+  --primary: #0d6efd;
   --secondary: #f2b558;
   --tertiary: #4f1602;
-  --light: #E6EDF2;
+  --light: #fff4de;
   --dark: #2d0d00;
   --darkest: #110400;
   --error: rgb(228, 46, 1);
@@ -68,7 +68,7 @@ h6 {
 }
 
 p {
-  font-size: 1.1rem;
+  font-size: .9rem;
   margin-top: 0;
 }
 
@@ -221,6 +221,30 @@ input:focus {
   border: 1px solid var(--tertiary);
 }
 
+.noteform {
+  width: 100%;
+  text-align: left;
+  background-color: var(--dark);
+  color: var(--light);
+  border: 1px solid var(--tertiary);
+}
+
+.groupcard {
+  width: 33%;
+  text-align: left;
+  background-color: var(--dark);
+  color: var(--light);
+  border: 1px solid var(--tertiary);
+}
+
+.gamecard {
+  width: 100%;
+  text-align: left;
+  background-color: var(--dark);
+  color: var(--light);
+  border: 1px solid var(--tertiary);
+}
+
 .error-text {
   color: var(--error);
 }
@@ -232,8 +256,6 @@ input:focus {
   border: 1px solid transparent;
   border-radius: 0.25rem;
 }
-
-
 
 @media screen and (max-width: 768px) {
   .card {
