--- a/client/src/index.css
+++ b/client/src/index.css
@@ -65,7 +65,19 @@ h5 {
 }
 
 h6 {
-  font-size: 1rem;
+  font-size: .9rem;
+  font-weight: bold;
+  letter-spacing: .1rem;
+  text-decoration: none;
+  padding: .5rem .75rem;
+  border-radius: .25rem;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  margin: 0 1px;
+  text-transform: uppercase;
+  width: 100%;
+  font-family: 'Roboto', serif;
 }
 
 p {
