conditional rendering home, apollo cache group, css

--- a/client/src/components/Nav/index.css
+++ b/client/src/components/Nav/index.css
@@ -7,3 +7,9 @@ header.flex-row {
     flex-direction: row;
     justify-content: space-between;
 }
+
+ul.flex-row.nav {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+}
