--- a/client/src/index.css
+++ b/client/src/index.css
@@ -111,7 +111,7 @@ button {
   border: none;
   outline: none;
   cursor: pointer;
-  margin: 0 1px;
+  margin-top: 1rem;
   background-color: var(--primary);
   text-transform: uppercase;
   width: 100%;
@@ -339,7 +339,7 @@ input:focus {
 }
 
 .welcome-msg p {
-  font-size: 1rem;
+  font-size: 1.5rem;
   margin-bottom: 1rem;
   line-height: tight;
   color: var(--light);
@@ -347,14 +347,17 @@ input:focus {
 }
 
 .welcome-msg h1 {
-  font-size: 3rem;
+  font-size: 4rem;
+  margin-bottom: 1rem;
+  line-height: 4rem;
 }
 
-.welcome-msg h3 {
-  font-size: 1.75rem;
+.welcome-msg h4 {
+  font-size: 2rem;
   margin-bottom: 2rem;
-  color: var(--light);
-  font-weight: 300;
+  color: var(--secondary);
+  font-weight: 200;
+  line-height: 3rem;
 }
 
 @media screen and (max-width: 768px) {
