added .env file and modified GroupCard2

--- a/client/src/components/GroupCard2/index.css
+++ b/client/src/components/GroupCard2/index.css
@@ -5,6 +5,7 @@ div.flex-row {
 div.card.border-dark {
     align-items: stretch;
     height: 100%;
+    background-color: var(--darkest);
 }
 
 img.card-img-top {
