--- a/client/src/index.css
+++ b/client/src/index.css
@@ -62,6 +62,7 @@ h4 {
 
 h5 {
   font-size: 1.25rem;
+  font-weight: 100;
 }
 
 h6 {
@@ -71,6 +72,8 @@ h6 {
 p {
   font-size: .9rem;
   margin-top: 0;
+  color: var(--light);
+
 }
 
 a {
@@ -252,7 +255,7 @@ input:focus {
   width: 100%;
   text-align: left;
   background-color: var(--dark);
-  color: var(--light);
+  color: var(--secondary);
   border: 1px solid var(--tertiary);
   margin: 0 0 1rem 1rem;
   border-radius: .25rem;
