--- a/client/src/index.css
+++ b/client/src/index.css
@@ -50,6 +50,7 @@ h1 {
 
 h2 {
   font-size: 2rem;
+  color: var(--text-light);
 }
 
 h3 {
@@ -154,6 +155,7 @@ form {
   font-size: .9rem;
   margin-bottom: .2rem;
   margin-top: .5rem;
+  color: var(--light);
 }
 
 input {
@@ -384,6 +386,11 @@ input:focus {
   color: var(--secondary);
   font-weight: 200;
   line-height: 3rem;
+}
+
+.welcome-msg button {
+  font-weight: 600;
+  border: none;
 }
 
 @media screen and (max-width: 768px) {
