--- a/client/src/index.css
+++ b/client/src/index.css
@@ -398,6 +398,10 @@ input:focus {
     width: 100%;
   }
 
+  h1 {
+    font-size: 2rem;
+  }
+
   .noteform {
     width: 100%;
     margin-left: 0;
